<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Menus.MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_menu_welcome" />

    <Button
        android:id="@+id/btn_Play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play" />

    <Button
        android:id="@+id/btn_Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_quizzs" />

    <Button
        android:id="@+id/btn_Download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_download" />

</LinearLayout>