<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/edit_QuizzTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:text="@string/name_quizz"
        android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
        android:maxWidth="325dp"
        android:maxLines="4"
        android:minWidth="80dp"/>

    <Button
        android:id="@+id/btn_editQuizzDetails"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_edit" />

    <Button
        android:id="@+id/btn_editQuizzDelete"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_remove" />
</LinearLayout>