<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.perso.iiens.net.quizz.Menus.PlayGame">

    <com.gauravk.audiovisualizer.visualizer.CircleLineVisualizer
        android:id="@+id/blast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:avColor="@color/av_dark_blue"
        app:avDensity="0.8"
        app:avSpeed="normal"
        app:avType="fill"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="328dp" />

    <LinearLayout
        android:id="@+id/linear_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/game_QuestionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_game_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_game_next" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/play_ViewAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/game_QuizzName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_game_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_game_start" />

        <Button
            android:id="@+id/btn_game_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_play_highscore" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_game_score_title"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_pseudo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
                android:maxWidth="325dp"
                android:maxLines="2"
                android:minWidth="80dp"
                android:text="@string/name_game_pseudo" />

            <Button
                android:id="@+id/btn_game_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_game_save_score" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
